tests/ui-msrv/transmute-illegal.stderr
error[E0277]: the trait bound `*const usize: AsBytes` is not satisfied
  --> tests/ui-msrv/transmute-illegal.rs:10:30
   |
10 | const POINTER_VALUE: usize = zerocopy::transmute!(&0usize as *const usize);
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                              |
   |                              the trait `AsBytes` is not implemented for `*const usize`
   |                              required by a bound introduced by this call
   |
   = help: the following other types implement trait `AsBytes`:
             f32
             f64
             i128
             i16
             i32
             i64
             i8
             isize
           and $N others
note: required by a bound in `POINTER_VALUE::transmute`
  --> tests/ui-msrv/transmute-illegal.rs:10:30
   |
10 | const POINTER_VALUE: usize = zerocopy::transmute!(&0usize as *const usize);
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `POINTER_VALUE::transmute`
   = note: this error originates in the macro `zerocopy::transmute` (in Nightly builds, run with -Z macro-backtrace for more info)
